Closed
Bug 1601794
Opened 6 years ago
Closed 6 years ago
Forkserver does not work with clang
Categories
(Core :: IPC, defect)
Core
IPC
Tracking
()
RESOLVED
FIXED
mozilla73
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: sinker, Assigned: sinker)
Details
Attachments
(2 files)
|
1.56 KB,
patch
|
Details | Diff | Splinter Review | |
|
47 bytes,
text/x-phabricator-request
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:72.0) Gecko/20100101 Firefox/72.0
Steps to reproduce:
with --enable-forkserver in mozconfig and clang, the MiniTransceiver.cpp fails to be built.
| Assignee | ||
Comment 1•6 years ago
|
||
Bug 1601794- Fix building errors with clang. r=gsvelto
Updated•6 years ago
|
Assignee: nobody → thinker.li
Pushed by cbrindusan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e2394b695d21
Fix building errors with clang. r=gsvelto
Comment 3•6 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in
before you can comment on or make changes to this bug.
Description
•