Bug 1601794- Fix building errors with clang. r=gsvelto

Bug 1601794- Fix building errors with clang. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D56095

--HG--
extra : moz-landing-system : lando